src/tests/cases/snapshots/ui__esc_to_go_up-5.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[4]"
---
                                                                                                                                                                                              
                                     /tmp/bandwhich_t  ts/esc_to_go_up (12.3K)                                                                                                                
                                                                                                                                                                                              
                                                                                                                              ┬                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file2                                                            │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                          4.1K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                 subfolder1/ (+1 descendants)                  
                                                                                                                              │                                                               
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                               
                                                                                                                              │                          4.1K (33%)                           
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file3                                                            │                                                               
                                                                                                                              │                                                               
                                                          4.1K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              ┴                                                               
                                                                                                                                                                                              

