src/tests/cases/snapshots/ui__esc_to_go_up-6.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[5]"
---
                                                                                                                                                                                              
                                                                                                                              ┬                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file2                                                            │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                          4.0K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                 subfolder1/ (+1 descendants)                  
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                               
                                                                                                                              │                          4.0K (33%)                           
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file3                                                            │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                          4.0K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              ┴                                                               
                                                                                                                                                                                              
                                                                                                                                                                                              

